--- a/notebooks/initialization.ipynb
+++ b/notebooks/initialization.ipynb
@@ -128,8 +128,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "169c2cee-4d25-4db8-872f-cee01d92ad5a",
+   "cell_type": "raw",
+   "id": "ee0e01b7-e0fe-44a6-bfe1-de4df443580d",
    "metadata": {},
    "source": [
     "Now, Above is the pre-activation(Z) and Acitvation(A) Variance of Random,Xavier and He initialization.\n",
@@ -137,7 +137,9 @@
     "In Random- weight are distributed through normal distribution around mean = 0 and std = 1. This makes it more prone to activation and gradient saturation like overshooting or shrinking.This happens because every n_in signal will have its variance which will get added which will make-\n",
     "Var(Z) = n_in*var(W)*var(X)\n",
     "with each layer , this will increse with 'to the power' of every layer -> var(Z^L) = n_in^L*var(W)*var(X)\n",
-    "s"
+    "\n",
+    "Here , in random wt init --> we got var(Z) using sigmoid fn =  200\n",
+    "                                    var(A) using sigmoid fn =  0.22\n"
    ]
   },
   {
