--- a/notebooks/initialization.ipynb
+++ b/notebooks/initialization.ipynb
@@ -143,12 +143,24 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "id": "9453ca9e-a8a9-407f-96e5-751ebe70ef35",
+   "metadata": {},
+   "source": [
+    "Using Wt. init. Techniques like Xavior( for sigmoid and Tanh) and He(for ReLU) can provide a better initialisation of weights and will avoid gradient shrinkage or explosion and can keep them stable across the Layers.\n",
+    "We use Xavior for Sigmoid and Tanh because they are symmetric( means there variance is normally centred around 0.sigmoid is largley comsiderd symmetric because its mean is 0.5 which is near 0). He for ReLU and leaky ReLU because it is asymmetric as it grows in positive(in ReLU) and some portion for negative vaues(in Leaky ReLU), which spreads its mean far from 0."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e10d369-ca15-48eb-acbb-147b02dbcdbf",
+   "id": "3ef9ad5f-f4a1-4f48-9e86-1c5c3c80ba8f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Backward Pass\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
