--- a/notebooks/optimizers.ipynb
+++ b/notebooks/optimizers.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "69469445-d2ca-4981-8b80-90a968412993",
    "metadata": {},
    "outputs": [
@@ -40,7 +40,37 @@
       "epoch17: theta:-0.1786, grad:1.5805, velocity: 9.6884\n",
       "epoch18: theta:-1.0148, grad:-0.3572, velocity: 8.3623\n",
       "epoch19: theta:-1.5645, grad:-2.0297, velocity: 5.4964\n",
-      "epoch20: theta:-1.7463, grad:-3.1290, velocity: 1.8178\n"
+      "epoch20: theta:-1.7463, grad:-3.1290, velocity: 1.8178\n",
+      "epoch21: theta:-1.5606, grad:-3.4925, velocity: -1.8565\n",
+      "epoch22: theta:-1.0814, grad:-3.1212, velocity: -4.7921\n",
+      "epoch23: theta:-0.4338, grad:-2.1628, velocity: -6.4757\n",
+      "epoch24: theta:0.2357, grad:-0.8677, velocity: -6.6958\n",
+      "epoch25: theta:0.7912, grad:0.4715, velocity: -5.5547\n",
+      "epoch26: theta:1.1329, grad:1.5824, velocity: -3.4168\n",
+      "epoch27: theta:1.2138, grad:2.2658, velocity: -0.8094\n",
+      "epoch28: theta:1.0439, grad:2.4277, velocity: 1.6992\n",
+      "epoch29: theta:0.6822, grad:2.0878, velocity: 3.6171\n",
+      "epoch30: theta:0.2202, grad:1.3644, velocity: 4.6198\n",
+      "epoch31: theta:-0.2396, grad:0.4404, velocity: 4.5983\n",
+      "epoch32: theta:-0.6055, grad:-0.4792, velocity: 3.6592\n",
+      "epoch33: theta:-0.8138, grad:-1.2111, velocity: 2.0822\n",
+      "epoch34: theta:-0.8384, grad:-1.6275, velocity: 0.2465\n",
+      "epoch35: theta:-0.6929, grad:-1.6768, velocity: -1.4550\n",
+      "epoch36: theta:-0.4234, grad:-1.3858, velocity: -2.6953\n",
+      "epoch37: theta:-0.0961, grad:-0.8468, velocity: -3.2725\n",
+      "epoch38: theta:0.2176, grad:-0.1923, velocity: -3.1375\n",
+      "epoch39: theta:0.4565, grad:0.4352, velocity: -2.3885\n",
+      "epoch40: theta:0.5801, grad:0.9130, velocity: -1.2367\n",
+      "epoch41: theta:0.5754, grad:1.1603, velocity: 0.0473\n",
+      "epoch42: theta:0.4561, grad:1.1508, velocity: 1.1934\n",
+      "epoch43: theta:0.2575, grad:0.9122, velocity: 1.9862\n",
+      "epoch44: theta:0.0272, grad:0.5149, velocity: 2.3025\n",
+      "epoch45: theta:-0.1855, grad:0.0544, velocity: 2.1267\n",
+      "epoch46: theta:-0.3398, grad:-0.3709, velocity: 1.5431\n",
+      "epoch47: theta:-0.4107, grad:-0.6795, velocity: 0.7093\n",
+      "epoch48: theta:-0.3924, grad:-0.8214, velocity: -0.1830\n",
+      "epoch49: theta:-0.2974, grad:-0.7848, velocity: -0.9495\n",
+      "epoch50: theta:-0.1525, grad:-0.5949, velocity: -1.4494\n"
      ]
     }
    ],
@@ -53,12 +83,12 @@
     "\n",
     "v = 0.0\n",
     "theta = 5.0\n",
-    "epochs = 20\n",
+    "epochs = 50\n",
     "\n",
     "for i in range(epochs):\n",
     "    g = grad(theta)\n",
     "    v = beta * v +  g\n",
-    "    theta = theta - eta* v\n",
+    "    theta = theta - eta * v\n",
     "\n",
     "    print(f\"epoch{i + 1}: theta:{theta:.4f}, grad:{g:.4f}, velocity: {v:.4f}\")\n",
     "\n",
