--- a/notebooks/optimizers.ipynb
+++ b/notebooks/optimizers.ipynb
@@ -97,11 +97,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "8c6340af-c1aa-48e2-8f88-896f7112a2d8",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'W': array([[-1.27128595, -2.24935835, -0.0456665 ],\n",
+      "       [-0.45628563,  1.84513198,  0.53264779],\n",
+      "       [-0.62416199, -1.19613405,  0.47048502]]), 'b': array([[0.],\n",
+      "       [0.],\n",
+      "       [0.]])}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def sigmoid(z):\n",
+    "    return 1 / (1 + np.exp(-z))\n",
+    "\n",
+    "def sig_der(z):\n",
+    "    s = sigmoid(z)\n",
+    "    return s*(1 - s)\n",
+    "\n",
+    "class MomentumSGD:\n",
+    "    def __init__(self,lr = 0.1,beta = 0.9):\n",
+    "        self.lr = lr\n",
+    "        self.beta = beta\n",
+    "        self.v = {}\n",
+    "\n",
+    "    def update(self,params,grads): \n",
+    "        for key in params.keys():\n",
+    "            if key not in self.v:\n",
+    "                self.v[key] = np.zeros_like(params[key])\n",
+    "\n",
+    "            self.v[key] = self.beta * self.v[key] + grads[key]\n",
+    "            params[key] -= self.lr * self.v[key]\n",
+    "        return params\n",
+    "\n",
+    "params = {\"W\": np.random.randn(3,3),\"b\":np.zeros((3,1))}\n",
+    "grads = {\"W\": np.random.randn(3,3),\"b\":np.zeros((3,1))}\n",
+    "\n",
+    "optimizer = MomentumSGD(lr = 0.1, beta = 0.9)\n",
+    "parameters = optimizer.update(params,grads)\n",
+    "print(parameters)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92bac0cd-409b-49eb-81b3-100dbd7afe1e",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def sigmoid(z):\n",
+    "    return 1 / (1 + np.exp(-z))\n",
+    "\n",
+    "def sig_der(z):\n",
+    "    s = sigmoid(z)\n",
+    "    return s*(1 - s)\n",
+    "\n",
+    "    \n",
+    "class NN:\n",
+    "    def __init__(self,input_size,hidden_size,output_size):\n",
+    "        np.random.seed(42)\n",
+    "        self.params = {\n",
+    "            \"W1\": np.random,,randn(hidden_size,input_size)*-.01,\n",
+    "            \"b1\": np.zeros((hidden_size,1)),\n",
+    "            \"W2\": np.random.randn(output_size,hidden_size)*0.01,\n",
+    "            \"b2\": np.Zeros((output_size,1))\n",
+    "        }\n",
+    "\n",
+    "    def forward(self,X):\n",
+    "        W1,b1,W2,b2 = self.params[\"W1\"],self.params[\"b1\"],self.params[\"W2\"],self.params[\"b2\"]\n",
+    "\n",
+    "        Z1 = np.dot(W1,X) + b1\n",
+    "        A1 = sigmoid(Z1)\n",
+    "        Z2 = np.dot(W2,A1) + b2\n",
+    "        A2 = sigmoid(Z2)\n",
+    "\n",
+    "        cache = (Z1,A1,Z2,A2)\n",
+    "\n",
+    "        return A2,cache\n",
+    "\n",
+    "    def loss(se1f,A2,Y):\n",
+    "        m = Y.shape[1]\n",
+    "        return -(1/m) * np.sum( Y * np.log(A2 + 1e-8) + (1 -  Y) * np.log(1 - A2 + 1e-8))\n",
+    "\n",
+    "    def backward(self,X,Y,cache):\n",
+    "\n",
+    "        m = X.shape[1]\n",
+    "        W2 = self.params[\"w2\"]\n",
+    "        Z1,A1,Z2,A2 = cache\n",
+    "\n",
+    "        dZ2 = A2 - Y\n",
+    "        dW2 = (1/m) * np.dot(dZ2,A1.T)\n",
+    "        db2 = (1/m) * np.sum(dZ2,axis = 1,keepdims = True)\n",
+    "\n",
+    "        dA1 = np.dot(W2.T,dZ2)\n",
+    "        dZ1 = dA1 * sig_der(Z1)\n",
+    "\n",
+    "        dW1 = (1/m) * np.dot(dZ1,X.T)\n",
+    "        db1 = (1/m) * np.sum(dZ1,axis = 1, keepdims = True)\n",
+    "\n",
+    "        grads = {\"dW1\":dW1, \"db1\": db1, \"dW2\": dW2, \"db2\": db2}\n",
+    "\n",
+    "        return  grads\n",
+    "\n",
+    "class MomentumSGD:\n",
+    "    def __init__(self,lr,beta):\n",
+    "        self.lr = lr\n",
+    "        self.beta = beta\n",
+    "        self.v = {}\n",
+    "\n",
+    "    def update(self,params,grads)\n",
+    "        for key in params.keys():\n",
+    "            if key not in self.v[key]:\n",
+    "                self.v[key] = np.zeros_like(params[key])   \n",
+    "\n",
+    "            self.v[key] = self.beta*self.v + grads[key]\n",
+    "            params[key] -= self.lr*self.v[key]\n",
+    "\n",
+    "        return para\n",
+    "        "
+   ]
   }
  ],
  "metadata": {
