--- a/notebooks/optimizers.ipynb
+++ b/notebooks/optimizers.ipynb
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "92bac0cd-409b-49eb-81b3-100dbd7afe1e",
    "metadata": {},
    "outputs": [],
@@ -167,7 +167,7 @@
     "    def __init__(self,input_size,hidden_size,output_size):\n",
     "        np.random.seed(42)\n",
     "        self.params = {\n",
-    "            \"W1\": np.random,,randn(hidden_size,input_size)*-.01,\n",
+    "            \"W1\": np.random.randn(hidden_size,input_size)*-.01,\n",
     "            \"b1\": np.zeros((hidden_size,1)),\n",
     "            \"W2\": np.random.randn(output_size,hidden_size)*0.01,\n",
     "            \"b2\": np.Zeros((output_size,1))\n",
@@ -215,7 +215,7 @@
     "        self.beta = beta\n",
     "        self.v = {}\n",
     "\n",
-    "    def update(self,params,grads)\n",
+    "    def update(self,params,grads):\n",
     "        for key in params.keys():\n",
     "            if key not in self.v[key]:\n",
     "                self.v[key] = np.zeros_like(params[key])   \n",
@@ -223,9 +223,17 @@
     "            self.v[key] = self.beta*self.v + grads[key]\n",
     "            params[key] -= self.lr*self.v[key]\n",
     "\n",
-    "        return para\n",
+    "        return params\n",
     "        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a03cfd95-2812-4024-9d16-244e3de7a587",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
