--- a/notebooks/optimizers.ipynb
+++ b/notebooks/optimizers.ipynb
@@ -148,10 +148,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 43,
    "id": "92bac0cd-409b-49eb-81b3-100dbd7afe1e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch0, Loss:0.6930\n",
+      "epoch100, Loss:0.6857\n",
+      "epoch200, Loss:0.6469\n",
+      "epoch300, Loss:0.6227\n",
+      "epoch400, Loss:0.6043\n",
+      "epoch500, Loss:0.5938\n",
+      "epoch600, Loss:0.5799\n",
+      "epoch700, Loss:0.5515\n",
+      "epoch800, Loss:0.5090\n",
+      "epoch900, Loss:0.4845\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -170,7 +187,7 @@
     "            \"W1\": np.random.randn(hidden_size,input_size)*-.01,\n",
     "            \"b1\": np.zeros((hidden_size,1)),\n",
     "            \"W2\": np.random.randn(output_size,hidden_size)*0.01,\n",
-    "            \"b2\": np.Zeros((output_size,1))\n",
+    "            \"b2\": np.zeros((output_size,1))\n",
     "        }\n",
     "\n",
     "    def forward(self,X):\n",
@@ -192,7 +209,7 @@
     "    def backward(self,X,Y,cache):\n",
     "\n",
     "        m = X.shape[1]\n",
-    "        W2 = self.params[\"w2\"]\n",
+    "        W2 = self.params[\"W2\"]\n",
     "        Z1,A1,Z2,A2 = cache\n",
     "\n",
     "        dZ2 = A2 - Y\n",
@@ -210,27 +227,53 @@
     "        return  grads\n",
     "\n",
     "class MomentumSGD:\n",
-    "    def __init__(self,lr,beta):\n",
+    "    def __init__(self,lr = 0.1,beta = 0.9):\n",
     "        self.lr = lr\n",
     "        self.beta = beta\n",
     "        self.v = {}\n",
     "\n",
     "    def update(self,params,grads):\n",
     "        for key in params.keys():\n",
-    "            if key not in self.v[key]:\n",
+    "            if key not in self.v:\n",
     "                self.v[key] = np.zeros_like(params[key])   \n",
     "\n",
-    "            self.v[key] = self.beta*self.v + grads[key]\n",
+    "            self.v[key] = self.beta*self.v[key] + grads[\"d\" + key]    # \"d\" is added so that W1..W2..etc become dW1..dW2..etc\n",
     "            params[key] -= self.lr*self.v[key]\n",
     "\n",
     "        return params\n",
-    "        "
+    "\n",
+    "\n",
+    "X = np.random.randn(2,100)\n",
+    "Y = (X[0,:] * X[1,:] > 0).astype(int).reshape(1,100)\n",
+    "\n",
+    "# print(Y)\n",
+    "\n",
+    "nn = NN(input_size = 2,hidden_size = 4,output_size = 1)\n",
+    "optimizer = MomentumSGD(lr = 0.1,beta = 0.9)\n",
+    "epochs = 1000\n",
+    "\n",
+    "for epoch in range(epochs):\n",
+    "    A2,cache = nn.forward(X)\n",
+    "    loss = nn.loss(A2,Y)\n",
+    "    grads = nn.backward(X,Y,cache)\n",
+    "    nn.params = optimizer.update(nn.params,grads)\n",
+    "\n",
+    "    if epoch % 100 == 0:\n",
+    "        print(f\"epoch{epoch}, Loss:{loss:.4f}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a03cfd95-2812-4024-9d16-244e3de7a587",
+   "id": "b9b9b296-e4d5-4fda-ad4e-02c5d745f363",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08207149-dad1-4aa8-8fd3-d3edd23533bb",
    "metadata": {},
    "outputs": [],
    "source": []
